# noirlings

./: Cargo.toml  LICENSE  README.md  info.toml  install.sh
exercises/advance/: pedersen_hash.nr
exercises/arrays/: array_advance.nr  array_basics.nr
exercises/control-flow/: count_factors.nr  grade_calculator.nr  if1.nr
exercises/data-types/: README.md  structs1.nr  structs2.nr  structs3.nr
exercises/embedded_curves/: README.md  embedded_curve1.nr  embedded_curve2.nr
exercises/fields/: field1.nr
exercises/integers/: integer1.nr  integer2.nr
exercises/intro/: intro1.nr
exercises/intro/src/: main.nr
exercises/merkle-tree/src/: main.nr
exercises/quizs/: quiz1.nr
exercises/references/: reference1.nr  reference2.nr
exercises/slices/: slice1.nr  slice2.nr  slice3.nr  slice4.nr  slice5.nr
exercises/strings/: string1.nr  string2.nr
exercises/structs/: shopping_cart.nr  structs2.nr  structs3.nr
exercises/traits/: traits1.nr  traits2.nr  traits3.nr  traits4.nr  traits5.nr
exercises/tuples/: tuple1.nr  tuple2.nr
exercises/variables/: variables1.nr  variables2.nr  variables3.nr  variables4.nr  variables5.nr  variables6.nr
runner-crate/: Nargo.toml
runner-crate/src/: main.nr
src/: exercise.rs  main.rs  nargo_utils.rs  run.rs  utils.rs  verify.rs
